--- a/contact.html
+++ b/contact.html
@@ -158,18 +158,19 @@
                         <p>
                             All kidding aside, she's a great child and I am easy to get in touch with.  When you call, you can expect to find an easy-going person to talk to that is open to conversation.
                         </p>
-                        <form action="https://formspree.io/f/mdopvrro" class="" method="POST">
+                        <form action="https://formspree.io/f/xgepbjjn" class="" method="POST">
                             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                                <input class="mdl-textfield__input" pattern="[A-Z,a-z, ]*" type="text" id="Name">
+                                <input class="mdl-textfield__input" pattern="[A-Z,a-z, ]*" type="text" id="Name" name="name">
                                 <label class="mdl-textfield__label" for="Name">Name...</label>
                                 <span class="mdl-textfield__error">Letters and spaces only</span>
                             </div>
                             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                                <input class="mdl-textfield__input" type="text" id="Email">
+<!--                                 <input class="mdl-textfield__input" type="text" id="Email"> -->
+				    <input class="mdl-textfield__input" type="email" id="Email" name="_replyto">
                                 <label class="mdl-textfield__label" for="Email">Email...</label>
                             </div>
                             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                                <textarea class="mdl-textfield__input" type="text" rows="5" id="note"></textarea>
+                                <textarea class="mdl-textfield__input" type="text" rows="5" id="note" name="message"></textarea>
                                 <label class="mdl-textfield__label" for="note">Enter note</label>
                             </div>
                             <p>
