--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
                     <div class="mdl-card__supporting-text">
                  Underwriting asset-types including Mixed-Use, Retail, Office, Hotel, and Multi-family buildings.	
 			    <p></p>
-			    Private Equity and Investment Advisory calculations including Discounted Cash Flows, Net Present Valuations, 
+			    Calculations for Private Equity and Investment Advisory including Discounted Cash Flows, Net Present Valuations, 
 			    Cash on Cash, Internal Rate of Returns, Leveraged Returns, After-Tax Returns and Promoter returns.  
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
