--- a/index.html
+++ b/index.html
@@ -275,8 +275,7 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
                     </div>
                     <div class="mdl-card__supporting-text">
                     Collaborated with a Java developer on a program to calculate real-time stock options data on the
-                        Interactive Brokers API.  I wrote the requirements documentation and modeled out the formulas in excel to be able to implement the program.  The formula is similar to the well-known equities derivatives model Black-Scholes
-                         without the time-regression analysis.  Attach Excel model coming soon.
+                        Interactive Brokers API.  Using a Fundamental-Analysis approach, I wrote the requirements documentation and modeled out the formulas in Excel to be able to implement the program.  Attach Excel model coming soon.
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
                         <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-example01.html">Video Demonstration</a>
