--- a/about.html
+++ b/about.html
@@ -166,12 +166,24 @@
                              This site is a work in progress and will be added to with time permitting
                              </p>	                          
                         </div>
-                        <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Irure mollit est sit labore</h3>
+                        <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">About Me</h3>
 
                         <div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding ">
                             <p>
-                                Excepteur reprehenderit sint exercitation ipsum consequat qui sit id velit elit. Velit anim eiusmod labore sit amet. Voluptate voluptate irure occaecat deserunt incididunt esse in. Sunt velit aliquip sunt elit ex nulla reprehenderit qui ut eiusmod ipsum do. Duis veniam reprehenderit laborum occaecat id proident nulla veniam. Duis enim deserunt voluptate aute veniam sint pariatur exercitation. Irure mollit est sit labore est deserunt pariatur duis aute laboris cupidatat. Consectetur consequat esse est sit veniam adipisicing ipsum enim irure.
+                               Interesting Fact 1
                             </p>
+                            <p>
+                               Interesting Fact 2
+                            </p>				
+                            <p>
+                               Interesting Fact 3
+                            </p>				
+                            <p>
+                               Interesting Fact 4
+                            </p>				
+                            <p>
+                               Interesting Fact 5
+                            </p>				
                         </div>
                     </div>
                 </div>
