--- a/index.html
+++ b/index.html
@@ -286,7 +286,8 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
                         Interactive Brokers API.  Using a Fundamental-Analysis approach, I wrote the requirements documentation and modeled out the formulas in Excel to be able to implement the program.  Attach Excel model coming soon.
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-example01.html">Video Demonstration</a>
+			<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0"   target="popup"
+  onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0','popup','width=1200,height=1200'); return false;">Video Demonstration</a>
                     </div>
                 </div>
 
@@ -339,7 +340,8 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
 			    Cash on Cash, Internal Rate of Returns, Leveraged Returns, After-Tax Returns and Promoter returns.  
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-example01.html">Video Demonstration</a>
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0"   target="popup"
+  onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0','popup','width=1200,height=1200'); return false;">Video Demonstration</a>
                     </div>
                 </div>
 
@@ -367,7 +369,8 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
                         Payroll Management, Cost Controls, Inventory Control, Pricing, Break-Even Analysis, RevPAR calculations for Hospitality Management and Consulting.
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-example01.html">Video Demonstration</a>
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0"   target="popup"
+  onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0','popup','width=1200,height=1200'); return false;">Video Demonstration</a>
                     </div>
                 </div>
             </div>
