--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
 
                 <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
                     <div class="mdl-card__media">
-                        <img class="article-image" src=" images/example-work01.jpg" border="0" alt="">
+                        <img class="article-image" src=" images/Carribe.png" border="0" alt="">
                     </div>
                     <div class="mdl-card__title">
                         <h2 class="mdl-card__title-text">Web Scraper</h2>
@@ -268,17 +268,15 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
                     <div class="mdl-card__media">
                         <a href="https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0" target="popup"
   onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0','popup','width=1200,height=1200'); return false;"">		    
-                        <img class="article-image" src=" images/example-work03.jpg" border="0" alt=""></a>	
+                        <img class="article-image" src=" images/InteractiveBrokers.png" border="0" alt=""></a>	
                     </div>
-			
 			
                     <div class="mdl-card__title">
 			<a href="https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0" target="popup"
   onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0','popup','width=1200,height=1200'); return false;"">		    
                         <h2 class="mdl-card__title-text">Interactive Brokers API</h2></a>
                     </div>
-			
-			
+
                     <div class="mdl-card__supporting-text">
                     Collaborated with a Java developer on a program to calculate real-time stock options data on the
                         Interactive Brokers API.  Using a Fundamental-Analysis approach, I wrote the requirements documentation and modeled out the formulas in Excel to be able to implement the program.  Attach Excel model coming soon.
@@ -320,16 +318,14 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
                     <div class="mdl-card__media">
 			    <a href="https://www.dropbox.com/s/5te7tfsj4sokrlz/edited%20Real%20Estate%20Financial%20Modeling.mp4?dl=0" target="popup"
   onclick="window.open('https://www.dropbox.com/s/5te7tfsj4sokrlz/edited%20Real%20Estate%20Financial%20Modeling.mp4?dl=0','popup','width=1200,height=1200'); return false;"">		    
-                        <img class="article-image" src=" images/example-work06.jpg" border="0" alt=""></a>
-                    </div>
-												     
+                        <img class="article-image" src=" images/realestate.png" border="0" alt=""></a>
+                    </div>								     
 												     
                     <div class="mdl-card__title">
 			<a href="https://www.dropbox.com/s/5te7tfsj4sokrlz/edited%20Real%20Estate%20Financial%20Modeling.mp4?dl=0" target="popup"
   onclick="window.open('https://www.dropbox.com/s/5te7tfsj4sokrlz/edited%20Real%20Estate%20Financial%20Modeling.mp4?dl=0','popup','width=1200,height=1200'); return false;"">		    
                         <h2 class="mdl-card__title-text">Real Estate, Financial Modeling & Underwriting</h2></a>
                     </div>
-			
 			
                     <div class="mdl-card__supporting-text">
                  Underwriting asset-types including Mixed-Use, Retail, Office, Hotel, and Multi-family buildings.	
@@ -353,7 +349,7 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
                     <div class="mdl-card__media">
 			<a href="https://www.dropbox.com/s/hv11a7si34yq4hg/edited%20Payroll%20Management%20Cost%20Control%20Cos.mp4?dl=0" target="popup"
   onclick="window.open('https://www.dropbox.com/s/hv11a7si34yq4hg/edited%20Payroll%20Management%20Cost%20Control%20Cos.mp4?dl=0','popup','width=1200,height=1200'); return false;"">		    
-                        <img class="article-image" src=" images/example-work09.jpg" border="0" alt=""></a>
+                        <img class="article-image" src=" images/hospitality.png" border="0" alt=""></a>
                     </div>
 			
                     <div class="mdl-card__title">
@@ -362,7 +358,6 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
                         <h2 class="mdl-card__title-text">Hospitality Management & Consulting</h2></a>
                     </div>
 			
-
                     <div class="mdl-card__supporting-text">
                         Payroll Management, Cost Controls, Inventory Control, Pricing, Break-Even Analysis, RevPAR calculations for Hospitality Management and Consulting.
                     </div>
