--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
 
                 <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
                     <div class="mdl-card__media">
-                        <img class="article-image" src=" images/Carribe.jpg" border="0" alt="">
+                        <img class="article-image" src=" images/carribe.jpg" border="0" alt="">
                     </div>
                     <div class="mdl-card__title">
                         <h2 class="mdl-card__title-text">Web Scraper</h2>
@@ -268,7 +268,7 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
                     <div class="mdl-card__media">
                         <a href="https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0" target="popup"
   onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0','popup','width=1200,height=1200'); return false;"">		    
-                        <img class="article-image" src=" images/interactive brokers.jpg" border="0" alt=""></a>	
+                        <img class="article-image" src=" images/Interactive Brokers.jpg" border="0" alt=""></a>	
                     </div>
 			
                     <div class="mdl-card__title">
@@ -318,7 +318,7 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
                     <div class="mdl-card__media">
 			    <a href="https://www.dropbox.com/s/5te7tfsj4sokrlz/edited%20Real%20Estate%20Financial%20Modeling.mp4?dl=0" target="popup"
   onclick="window.open('https://www.dropbox.com/s/5te7tfsj4sokrlz/edited%20Real%20Estate%20Financial%20Modeling.mp4?dl=0','popup','width=1200,height=1200'); return false;"">		    
-                        <img class="article-image" src=" images/realestate.png" border="0" alt=""></a>
+                        <img class="article-image" src=" images/RealEstate.png" border="0" alt=""></a>
                     </div>								     
 												     
                     <div class="mdl-card__title">
@@ -349,7 +349,7 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
                     <div class="mdl-card__media">
 			<a href="https://www.dropbox.com/s/hv11a7si34yq4hg/edited%20Payroll%20Management%20Cost%20Control%20Cos.mp4?dl=0" target="popup"
   onclick="window.open('https://www.dropbox.com/s/hv11a7si34yq4hg/edited%20Payroll%20Management%20Cost%20Control%20Cos.mp4?dl=0','popup','width=1200,height=1200'); return false;"">		    
-                        <img class="article-image" src=" images/hospitality.png" border="0" alt=""></a>
+                        <img class="article-image" src=" images/Hospitality.png" border="0" alt=""></a>
                     </div>
 			
                     <div class="mdl-card__title">
