--- a/about.html
+++ b/about.html
@@ -147,7 +147,7 @@
                         <h2 class="mdl-card__title-text">About</h2>
                     </div>
                     <div class="mdl-card__media">
-                        <img class="article-image" src=" images/About1.jpg" border="0" alt="">
+                        <img class="article-image" src=" images/About1.jpeg" border="0" alt="">
                     </div>
 
                     <div class="mdl-grid portfolio-copy">
