--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             </div>
 
 
+		
 <!-- Social Media Icons on Banner  -->
 
 <div class="newDiv social_media">
@@ -67,6 +68,7 @@
 </div>
 
 
+		
 <!-- Social Icon -->
 <div class="social_media social_media_border">
     <a href="https://www.linkedin.com/in/geraldtom" style="color: white;">
@@ -74,6 +76,17 @@
         LinkedIn/in/geraldtom
     </a>
 
+	
+	
+	<a href="https://www.linkedin.com/in/geraldtom" target="popup"
+	  onclick="window.open('https://www.linkedin.com/in/geraldtom','popup','width=1200,height=1200'); return false;"">
+		<i class="fa fa-linkedin fa-2x"></i>
+		LinkedIn/in/geraldtom
+	 </a>
+	
+	
+	
+	
     <a href="https://twitter.com/djangoaddict" style="color: white;">
         <i class="fa fa-twitter fa-2x"></i>
         @DjangoAddict</a>
@@ -112,6 +125,7 @@
 
 
 
+
 <!-- Navigation -->
             <div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
                 <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
@@ -136,6 +150,14 @@
 
 
 
+		
+		
+		
+		
+		
+		
+		
+		
 
         <main class="mdl-layout__content">
             <div class="mdl-grid portfolio-max-width">
