--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <a href="#" style="color: white;">
         <i class="fa fa-envelope-o fa-2x"></i>
-        gerald.tom@gmail.com
+	    <a href="gerald.tom@gmail.com">gerald.tom@gmail.com</a>
     </a>
 
     <a href="#" style="color: white;">
