--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 <div class="newDiv social_media">
 
 
-    <a href="#" style="color: white;">
+    <a href="mailto:gerald.tom@gmail.com?subject=Hiring%20Inquiry" style="color: white;">
         <i class="fa fa-envelope-o fa-2x"></i>
-	    <a href="gerald.tom@gmail.com">gerald.tom@gmail.com</a>
+	gerald.tom@gmail.com
     </a>
 
     <a href="#" style="color: white;">
