--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0
                             A successful SEO campaign involving influencers, bloggers, backlink building, and other page optimization techniques was also used to increase search engine rankings.
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="https://www.dearisabella.net/">Visit Website</a>
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="https://www.dearisabella.net/" target="popup" onclick="window.open('https://www.dearisabella.net/','popup','width=1200,height=1200'); return false;">Visit Website</a>
                     </div>
                 </div>
 
