--- a/portfolio-charity.html
+++ b/portfolio-charity.html
@@ -157,10 +157,10 @@
             <div class="mdl-grid portfolio-max-width">
                 <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
                     <div class="mdl-card__title">
-                        <h2 class="mdl-card__title-text">Blog template</h2>
+                        <h2 class="mdl-card__title-text">Charity</h2>
                     </div>
                     <div class="mdl-card__media">
-                        <img class="article-image" src=" images/portfolio-example-01.jpg" border="0" alt="">
+                        <img class="article-image" src=" images/GoFundMeFrontlineBanner.jpg" border="0" alt="">
                     </div>
                     <div class="mdl-card__supporting-text">
                         <strong>Includes</strong>
