--- a/portfolio-charity.html
+++ b/portfolio-charity.html
@@ -160,7 +160,7 @@
                         <h2 class="mdl-card__title-text">Charity</h2>
                     </div>
                     <div class="mdl-card__media">
-                        <img class="article-image" src=" images/GoFundMeFrontlineBanner.jpg" border="0" alt="">
+                        <img class="article-image" src=" images/banner.jpg" border="0" alt="">
                     </div>
                     <div class="mdl-card__supporting-text">
                         <strong>Includes</strong>
