--- a/portfolio-charity.html
+++ b/portfolio-charity.html
@@ -217,7 +217,7 @@
 
                         <div class="mdl-cell mdl-cell--6-col">
                             <a href="https://pcfordr.github.io/PCforDominicanRepublic/"   target="popup"
-  onclick="window.open('https://pcfordr.github.io/PCforDominicanRepublic/','popup','width=1200,height=1200'); return false;"><img class="article-image" src=" images/portfolio-example-06.jpg" border="0" alt=""></a>
+  onclick="window.open('https://pcfordr.github.io/PCforDominicanRepublic/','popup','width=1200,height=1200'); return false;"><img class="article-image" src=" images/PCforDR3-334-275.jpg" border="0" alt=""></a>
                         </div>
                         <div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding ">
                             <p>
