--- a/portfolio-charity.html
+++ b/portfolio-charity.html
@@ -210,7 +210,7 @@
                         <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">PCforDR</h3>
                         <div class="mdl-cell mdl-cell--6-col">
                             <a href="https://www.dearisabella.net/"   target="popup"
-  onclick="window.open('https://www.dearisabella.net/','popup','width=1200,height=1200'); return false;"><img class="article-image" src=" images/portfolio-example-05.jpg" border="0" alt=""></a>
+  onclick="window.open('https://www.dearisabella.net/','popup','width=1200,height=1200'); return false;"><img class="article-image" src=" images/DearIsabellaPic.jpg" border="0" alt=""></a>
                         </div>
 
 
