--- a/about.html
+++ b/about.html
@@ -52,6 +52,19 @@
 
 		
 		
+<!-- Social Media Icons on Banner  -->
+
+<div class="newDiv social_media">
+    <a href="mailto:gerald.tom@gmail.com?subject=Hiring%20Inquiry" style="color: white;">
+        <i class="fa fa-envelope-o fa-2x"></i>
+	gerald.tom@gmail.com
+    </a>
+
+    <a href="#" style="color: white;">
+        <i class="fa fa-phone fa-2x"></i>
+        +1 917 282 2017
+    </a>
+</div>
 		
 <!-- Social Icon -->
 <div class="social_media social_media_border">
