--- a/portfolio-charity.html
+++ b/portfolio-charity.html
@@ -172,15 +172,10 @@
 
                                 Through an incredibly difficult time for our country, this was a great experience
                                 leading a team that quickly grew from a one man effort into a 10+ person team which
-                                included <a href="https://www.gofundme.com/f/tztm7-ppe-for-the-frontlines"   target="popup"
-  onclick="window.open('https://www.gofundme.com/f/tztm7-ppe-for-the-frontlines','popup','width=1200,height=1200'); return false;">
-                                  fundraising</a>, sourcing and distribution efforts.  Although incredibly difficult
+                                included fundraising, sourcing and distribution efforts.  Although incredibly difficult
                                   at the time, through our combined resources, we were able to get 501-c charity status
                                    through a sponsorship and source incredibly difficult to obtain masks.
-                                   In the end, we were able donate to 2
-                                   <a href="https://www.dropbox.com/scl/fi/4swg3rpwvqrm17sbzwzz2/RWJBH-Hold-Harmless-Letter-to-PPE-Donors-3.doc?dl=0&rlkey=ycy8obgypdyik4kjfw9l6bii5" target="popup"
-  onclick="window.open('https://www.dropbox.com/scl/fi/4swg3rpwvqrm17sbzwzz2/RWJBH-Hold-Harmless-Letter-to-PPE-Donors-3.doc?dl=0&rlkey=ycy8obgypdyik4kjfw9l6bii5','popup','width=600,height=600'); return false;">
-                                     hospitals</a>, individual nurses, doctors and the Emergency Medical Services unit of the
+                                   In the end, we were able donate to 2 hospitals, individual nurses, doctors and the Emergency Medical Services unit of the
                                      <a href="https://www.dropbox.com/s/kz31av5evde7k9m/Frontline.PDF?dl=0" target="popup"
   onclick="window.open('https://www.dropbox.com/s/kz31av5evde7k9m/Frontline.PDF?dl=0','popup','width=1200,height=1200'); return false;">
                                        Greenburgh Police Department.</a>
@@ -188,8 +183,8 @@
                             </p>
                         </div>
                         <div class="mdl-cell mdl-cell--6-col">
-                            <a href="https://frontlinemasks.org/"   target="popup"
-  onclick="window.open('https://frontlinemasks.org/','popup','width=1200,height=1200'); return false;"><img class="article-image" src=" images/Greenburgh400-400.jpg" border="0" alt=""></a>
+                            <a href="https://www.dropbox.com/s/kz31av5evde7k9m/Frontline.PDF?dl=0" target="popup"
+  onclick="window.open('https://www.dropbox.com/s/kz31av5evde7k9m/Frontline.PDF?dl=0','popup','width=1200,height=1200'); return false;"><img class="article-image" src=" images/Greenburgh400-400.jpg" border="0" alt=""></a>
                         </div>
 
 
