--- a/portfolio-charity.html
+++ b/portfolio-charity.html
@@ -166,13 +166,15 @@
 			
 			
                     <div class="mdl-grid portfolio-copy">
-                        <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Introduction / Greenburgh</h3>
+                        <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">PPE Donations</h3>
                         <div class="mdl-cell mdl-cell--6-col mdl-card__supporting-text no-padding">
                             <p>
 
                                 Through an incredibly difficult time for our country, this was a great experience
                                 leading a team that quickly grew from a one man effort into a 10+ person team which
-                                included fundraising, sourcing and distribution efforts.  Although incredibly difficult
+                                included <a href="https://frontlinemasks.org/" target="popup"
+  onclick="window.open('https://frontlinemasks.org/','popup','width=1200,height=1200'); return false;">
+                                       Fundraising</a>, Sourcing and Distribution efforts.  Although incredibly difficult
                                   at the time, through our combined resources, we were able to get 501-c charity status
                                    through a sponsorship and source incredibly difficult to obtain masks.
                                    In the end, we were able donate to 2 hospitals, individual nurses, doctors and the Emergency Medical Services unit of the
