--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@ onclick="window.open('https://www.dropbox.com/s/togxlnkq410lk7c/edited%20Robidex
 			    The program is being used as a proprietary database to generate client leads.
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0"   target="popup"
-  onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0','popup','width=1200,height=1200'); return false;">Video Demonstration</a>
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="https://www.dropbox.com/s/togxlnkq410lk7c/edited%20Robidex.mp4?dl=0"   target="popup"
+  onclick="window.open('https://www.dropbox.com/s/togxlnkq410lk7c/edited%20Robidex.mp4?dl=0'); return false;">Video Demonstration</a>
                     </div>
                 </div>
 
@@ -245,8 +245,8 @@ onclick="window.open('https://www.dropbox.com/s/togxlnkq410lk7c/edited%20Robidex
                     </div>								     
 												     
                     <div class="mdl-card__title">
-			<a href="https://www.dropbox.com/s/5te7tfsj4sokrlz/edited%20Real%20Estate%20Financial%20Modeling.mp4?dl=0" target="popup"
-  onclick="window.open('https://www.dropbox.com/s/5te7tfsj4sokrlz/edited%20Real%20Estate%20Financial%20Modeling.mp4?dl=0','popup','width=1200,height=1200'); return false;"">		    
+			<a href="https://www.dropbox.com/s/l4lh61imm3ai0yo/RE%20Financial%20ModelEdit.mov?dl=0" target="popup"
+  onclick="window.open('https://www.dropbox.com/s/l4lh61imm3ai0yo/RE%20Financial%20ModelEdit.mov?dl=0','popup','width=1200,height=1200'); return false;"">		    
                         <h2 class="mdl-card__title-text">Real Estate, Financial Modeling & Underwriting</h2></a>
                     </div>
 			
@@ -257,8 +257,8 @@ onclick="window.open('https://www.dropbox.com/s/togxlnkq410lk7c/edited%20Robidex
 			    Cash on Cash, Internal Rate of Returns, Leveraged Returns, After-Tax Returns and Promoter returns.  
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="https://www.dropbox.com/s/5te7tfsj4sokrlz/edited%20Real%20Estate%20Financial%20Modeling.mp4?dl=0"   target="popup"
-  onclick="window.open('https://www.dropbox.com/s/5te7tfsj4sokrlz/edited%20Real%20Estate%20Financial%20Modeling.mp4?dl=0','popup','width=1200,height=1200'); return false;">Video Demonstration</a>
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="https://www.dropbox.com/s/l4lh61imm3ai0yo/RE%20Financial%20ModelEdit.mov?dl=0"   target="popup"
+  onclick="window.open('https://www.dropbox.com/s/l4lh61imm3ai0yo/RE%20Financial%20ModelEdit.mov?dl=0','popup','width=1200,height=1200'); return false;">Video Demonstration</a>
                     </div>
                 </div>
 
@@ -276,8 +276,8 @@ onclick="window.open('https://www.dropbox.com/s/togxlnkq410lk7c/edited%20Robidex
                     </div>
 			
                     <div class="mdl-card__title">
-			<a href="https://www.dropbox.com/s/hv11a7si34yq4hg/edited%20Payroll%20Management%20Cost%20Control%20Cos.mp4?dl=0" target="popup"
-  onclick="window.open('https://www.dropbox.com/s/hv11a7si34yq4hg/edited%20Payroll%20Management%20Cost%20Control%20Cos.mp4?dl=0','popup','width=1200,height=1200'); return false;"">		    
+			<a href="https://www.dropbox.com/s/6ja3n2hsgva9st1/Payroll%20Management%20Cost%20Control%20Edit.mp4?dl=0" target="popup"
+  onclick="window.open('https://www.dropbox.com/s/6ja3n2hsgva9st1/Payroll%20Management%20Cost%20Control%20Edit.mp4?dl=0','popup','width=1200,height=1200'); return false;"">		    
                         <h2 class="mdl-card__title-text">Hospitality Management & Consulting</h2></a>
                     </div>
 			
@@ -285,8 +285,8 @@ onclick="window.open('https://www.dropbox.com/s/togxlnkq410lk7c/edited%20Robidex
                         Payroll Management, Cost Controls, Inventory Control, Pricing, Break-Even Analysis, RevPAR calculations for Hospitality Management and Consulting.
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
-                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="https://www.dropbox.com/s/hv11a7si34yq4hg/edited%20Payroll%20Management%20Cost%20Control%20Cos.mp4?dl=0"   target="popup"
-  onclick="window.open('https://www.dropbox.com/s/hv11a7si34yq4hg/edited%20Payroll%20Management%20Cost%20Control%20Cos.mp4?dl=0','popup','width=1200,height=1200'); return false;">Video Demonstration</a>
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="https://www.dropbox.com/s/6ja3n2hsgva9st1/Payroll%20Management%20Cost%20Control%20Edit.mp4?dl=0"   target="popup"
+  onclick="window.open('https://www.dropbox.com/s/6ja3n2hsgva9st1/Payroll%20Management%20Cost%20Control%20Edit.mp4?dl=0','popup','width=1200,height=1200'); return false;">Video Demonstration</a>
                     </div>
                 </div>
 		    
@@ -336,14 +336,14 @@ onclick="window.open('https://www.dropbox.com/s/togxlnkq410lk7c/edited%20Robidex
 
                 <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
                     <div class="mdl-card__media">
-                        <a href="https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0" target="popup"
-  onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0','popup','width=1200,height=1200'); return false;"">		    
+                        <a href="#" target="popup"
+  onclick="window.open('#','popup','width=1200,height=1200'); return false;"">		    
                         <img class="article-image" src=" images/Interactive Brokers.jpg" border="0" alt=""></a>	
                     </div>
 			
                     <div class="mdl-card__title">
-			<a href="https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0" target="popup"
-  onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0','popup','width=1200,height=1200'); return false;"">		    
+			<a href="#" target="popup"
+  onclick="window.open('#','popup','width=1200,height=1200'); return false;"">		    
                         <h2 class="mdl-card__title-text">Requirement Writing</h2></a>
                     </div>
 
@@ -352,8 +352,8 @@ onclick="window.open('https://www.dropbox.com/s/togxlnkq410lk7c/edited%20Robidex
                         Interactive Brokers API.  Using a Fundamental-Analysis approach, I wrote the requirements documentation and modeled out the formulas in Excel to be able to implement the program.  Attach Excel model coming soon.
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
-			<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0"   target="popup"
-  onclick="window.open('https://www.dropbox.com/s/sarnjqlt7bn5v7p/Robidex.mp4?dl=0','popup','width=1200,height=1200'); return false;">Video Demonstration</a>
+			<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="#"   target="popup"
+  onclick="window.open('#','popup','width=1200,height=1200'); return false;">Video Demonstration</a>
                     </div>
                 </div>
 
