--- a/about.html
+++ b/about.html
@@ -179,20 +179,9 @@
 
                         <div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding ">
                             <p>
-                               Interesting Fact 1
+                               Coming Soon...
                             </p>
-                            <p>
-                               Interesting Fact 2
-                            </p>				
-                            <p>
-                               Interesting Fact 3
-                            </p>				
-                            <p>
-                               Interesting Fact 4
-                            </p>				
-                            <p>
-                               Interesting Fact 5
-                            </p>				
+				
                         </div>	    
                     </div>
 			
