--- a/index.html
+++ b/index.html
@@ -85,18 +85,18 @@
     </a> -->
 
 
-	<a href="https://github.com/DjangoAddict/" target="popup" style="color: white;"
+<!-- 	<a href="https://github.com/DjangoAddict/" target="popup" style="color: white;"
 	  onclick="window.open('https://github.com/DjangoAddict/','popup','width=1200,height=1200'); return false;"">
         <i class="fa fa-github fa-2x"></i>
         @DjangoAddict
-	</a>	    
+	</a>	     -->
 	
 			 
-	<a href="https://github.com/DjangoAddict/" target="popup" style="color: white;"
+<!-- 	<a href="https://github.com/DjangoAddict/" target="popup" style="color: white;"
 	  onclick="window.open('https://github.com/DjangoAddict/','popup','width=1200,height=1200'); return false;"">
         <i class="fa fa-file-pdf-o fa-2x"></i>
         Download Resume
-	</a>	  
+	</a>	   -->
 					 
 </div>
 
