--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ onclick="window.open('https://www.dropbox.com/s/togxlnkq410lk7c/edited%20Robidex
                     <div class="mdl-card__title">
 			<a href="https://www.dropbox.com/s/l4lh61imm3ai0yo/RE%20Financial%20ModelEdit.mov?dl=0" target="popup"
   onclick="window.open('https://www.dropbox.com/s/l4lh61imm3ai0yo/RE%20Financial%20ModelEdit.mov?dl=0','popup','width=1200,height=1200'); return false;"">		    
-                        <h2 class="mdl-card__title-text">Real Estate, Financial Modeling & Underwriting</h2></a>
+                        <h2 class="mdl-card__title-text">Real Estate, <p>Financial Modeling </p><p>& Underwriting</p></h2></a>
                     </div>
 			
                     <div class="mdl-card__supporting-text">
@@ -278,7 +278,7 @@ onclick="window.open('https://www.dropbox.com/s/togxlnkq410lk7c/edited%20Robidex
                     <div class="mdl-card__title">
 			<a href="https://www.dropbox.com/s/6ja3n2hsgva9st1/Payroll%20Management%20Cost%20Control%20Edit.mp4?dl=0" target="popup"
   onclick="window.open('https://www.dropbox.com/s/6ja3n2hsgva9st1/Payroll%20Management%20Cost%20Control%20Edit.mp4?dl=0','popup','width=1200,height=1200'); return false;"">		    
-                        <h2 class="mdl-card__title-text">Hospitality Management & Consulting</h2></a>
+                        <h2 class="mdl-card__title-text">Hospitality Management <p>& Consulting</p></h2></a>
                     </div>
 			
                     <div class="mdl-card__supporting-text">
