--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ onclick="window.open('https://www.dropbox.com/s/togxlnkq410lk7c/edited%20Robidex
           Real Estate Investment Advisory has lead me to an interest in real estate data.  This is an analytical warehouse of New York building and ownership data comprised of
                          billions of cells of data which are optimized to process queries in milliseconds.  Data was aggregated from various sources.
                          An ERD diagram and bridge tables were then established for the architecture.
-                           Optimization techniques were then applied in raw PostgreSQL using Psycopg2 to interface with Flask as the frontend user-interface.  
+                           Optimization techniques were then applied in raw PostgreSQL using Psycopg2 to interface with Flask (Python Framework) as the frontend user-interface.  
 			    The program is being used as a proprietary database to generate client leads.
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
