--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@ onclick="window.open('https://www.dropbox.com/s/togxlnkq410lk7c/edited%20Robidex
 			    
           Real Estate Investment Advisory lead me to an interest in real estate data.  This is an analytical warehouse of New York building and ownership data comprised of
                          billions of cells utilizing data engineering to optimize the database allowing queries to be processed in milliseconds.  Data was aggregated from various sources.
-                         An ERD diagram and bridge tables were then established for the architecture.
-                           Optimization techniques were then applied in raw PostgreSQL (SQL-Language) using Psycopg2 (Database Driver) to interface with Flask (Python Framework) as the frontend user-interface.  
+                         An ERD diagram and bridge tables were established for the architecture.
+                           Optimization techniques were applied in raw PostgreSQL (SQL-Language) using Psycopg2 (Database Driver) to interface with Flask (Python Framework) as the frontend user-interface.  
 			    The program is being used as a proprietary database to generate client leads.
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
