--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ onclick="window.open('https://www.dropbox.com/s/togxlnkq410lk7c/edited%20Robidex
                          billions of cells utilizing data engineering to optimize the database allowing queries to be processed in milliseconds.  Data was aggregated from various sources.
                          An ERD diagram and bridge tables were established for the architecture.
                            Optimization techniques were applied in raw PostgreSQL (SQL-Language) using Psycopg2 (Database Driver) to interface with Flask (Python Framework) as the frontend user-interface.  
-			    The program is being used as a proprietary database to generate client leads.  The program concept and code were built entirely by myself and still a work in progress.
+			    The program is being used as a proprietary database to generate client leads.  The program concept and code were built entirely by myself and a second iteration is in development.
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
                         <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="https://www.dropbox.com/s/togxlnkq410lk7c/edited%20Robidex.mp4?dl=0"   target="popup"
